--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
 <head>
       <title>Virsraksts</title>
       <link href="style.css" rel="stylesheet" />
+
+      <style>
+            body{
+                  background-color: gray;
+            }
+      header{
+            text-align:center;
+            font-size: 500px ;
+      }
+      </style>
 </head>
 
 <body>
+      
+      <header>BOI</header>
+
+      <div class="wrapper">
+            <table>
+                  <thead>
+                        <tr>
+                              <td>Nr.</td>
+                              <td>Vārds</td>
+                              <td>Balvas</td>
+                        </tr>
+                  </thead>
+                  <tbody class="Rindas">
+                        <tr>
+                              <td>1</td>
+                              <td>vārds</td>
+                              <td>Balvas</td>
+                        </tr>
+                  </tbody>
+            </table>
+      </div>
+
+
+
+
+
 
 
      <script src="script.js"></script>
