--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
             header {
                   text-align: center;
-                  font-size: 500px;
+                  font-size: 200px;
             }
       </style>
 </head>
 
 <body>
 
-      <header>BOI</header>
+      <header>Izloze</header>
 
       <div class="wrapper">
-            <table>
+            <table class="center">
                   <thead>
                         <tr>
                               <td>Nr.</td>
@@ -30,7 +30,7 @@
                               <td>Balvas</td>
                         </tr>
                   </thead>
-                  <tbody class="Rindas">
+                  <tbody class="rindas">
                         <tr>
                               <td></td>
                               <td></td>
